# duyel-bot

./: .env.example  .gitignore  main.py  pyproject.toml  utils.py
alembic/: env.py
alembic/versions/: b58304b5428d_change_remaining_float_fields_to_numeric.py  bb939531358c_change_float_to_numeric_for_monetary_.py
cache/: redis_client.py
configs/: __init__.py  dirs.py  logger.py  settings.py
core/: bot.py  db.py
database/: __init__.py  core.py  models.py  repository.py  services.py  status.py  unit_of_work.py
filters/: admins.py
handlers/: __init__.py  constants.py  dialogs.py  main.py  states.py  widgets.py
handlers/windows/: __init__.py  create_games.py  game_room.py  games.py  language.py  main.py  my_games.py  support.py
localization/: __init__.py  fluent_dispenser.py
localization/locales/en/: main.ftl
localization/locales/ru/: main.ftl
middlewares/: __init__.py  l10n.py
tests/: conftest.py  test_full_game_flow.py
